possibilité de choisir les categories lors j'ajout d'objet